k8s/order_deployment.yml
# 각각의 pod가 있고 이를 관리하는 서비스가 있고 이 서비스를 관리하는 replicaset이 있고, 이 replicaset으로 pod의 개수가 조절된다.

apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-deployment    # 클러스터 내에서 유일한 Pod 이름
  namespace: lgcns          # Pod가 속할 네임스페이스

spec:  
  # 자원공간에 대한 낭비를 방지하고 관리의 편의성을 제공해주는 옵션(없어도 된다.)
  revisionHistoryLimit: 2   # revisionHistoryLimit은 replicaset이 관리하는 pod의 개수를 조절하는 것과는 별개로, replicaset이 관리하는 pod의 변경 이력을 몇 개까지 보관할 것인지를 설정하는 것이다. 예를 들어, revisionHistoryLimit이 3으로 설정되어 있다면, replicaset이 관리하는 pod의 변경 이력이 3개까지만 보관되고, 그 이상이 되면 가장 오래된 변경 이력이 삭제된다. 따라서, revisionHistoryLimit은 replicaset이 관리하는 pod의 개수를 조절하는 것과는 별개로, replicaset이 관리하는 pod의 변경 이력을 몇 개까지 보관할 것인지를 설정하는 것이다.                      
  replicas: 2               # 몇개의 Pod를 유지할 것인가 
  selector:
    matchLabels:            # replicaset은 직접 pod로 찾아갈 수 없으므로 matchLabels라고 주는 것
      app: order-pod        # service가 찾는 pod의 이름

  template:                 # 참조의 대상이 되는 container를 의미하는 것(여기서 pod를 만드는 것)
    metadata:
      labels:
        app: order-pod 

    spec:
      containers:               
        - name: order-container

          # ecr의 이미지를 가져와서 컨테이너를 만들겠다.
          image: 447839931800.dkr.ecr.us-east-2.amazonaws.com/order-sglim-backend
          ports:
           - containerPort: 8888 # 컨테이너가 노출할 포트

          # k8s-secret에서 환경변수 가져오기
--- # 이거 위랑 아래를 나눠(구분해)주는 것
apiVersion: v1
kind: Service

metadata:
  name: order-service       # 클러스터 내에서 유일한 Pod 이름
  namespace: lgcns          # Pod가 속할 네임스페이스

spec:        
  type: ClusterIP           # service에서 selector를 쓰기 위해서는 type을 써줘야 함(쓰지 않으면 ClusterIP가 default)
  selector:
      app: order-pod        # 외부에서 order-pod라고 labes 이름이 붙은 놈에게 서비스를 통해 접근할 수 있게 해줌                          
  ports:
  # service port
  - port: 80             
    # Pod inner port
    targetPort: 8888
