k8s/order_redis.yml
# 각각의 pod가 있고 이를 관리하는 서비스가 있고 이 서비스를 관리하는 replicaset이 있고, 이 replicaset으로 pod의 개수가 조절된다.

apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment    # 클러스터 내에서 유일한 Pod 이름
  namespace: lgcns          # Pod가 속할 네임스페이스

spec:                       
  replicas: 1               # 몇개의 Pod를 유지할 것인가 
  selector:
    matchLabels:            # replicaset은 직접 pod로 찾아갈 수 없으므로 matchLabels라고 주는 것
      app: redis-pod  

  template:                 # 참조의 대상이 되는 container를 의미하는 것(여기서 pod를 만드는 것)
    metadata:
      labels:
        app: redis-pod 

    spec:
      containers:               
        - name: redis-container
          image: redis:7.2  
          ports:
           - containerPort: 6379 # 컨테이너가 노출할 포트

--- # 이거 위랑 아래를 나눠(구분해)주는 것
apiVersion: v1
kind: Service

metadata:
  name: redis-service       # 클러스터 내에서 유일한 Pod 이름
  namespace: lgcns          # Pod가 속할 네임스페이스

spec:        
  type: ClusterIP           # service에서 selector를 쓰기 위해서는 type을 써줘야 함(쓰지 않으면 ClusterIP가 default)
  selector:
      app: redis-pod        # 외부에서 nginx-pod라고 labes 이름이 붙은 놈에게 서비스를 통해 접근할 수 있게 해줌                          
  ports:
  # service port
  - port: 6379                
    # Pod inner port
    targetPort: 6379
